# beaker

./: .gitignore  CMakeLists.txt
beaker/: CMakeLists.txt  arithmetic_expression.cpp  arithmetic_expression.hpp  bitwise_expression.cpp  bitwise_expression.hpp  common.hpp  context.cpp  context.hpp  conversion.cpp  conversion.hpp  conversion_semantics.cpp  cut.cpp  data_parser.cpp  data_parser.hpp  declaration.cpp  declaration.hpp  declaration_evaluation.cpp  declaration_semantics.cpp  dump.cpp  dump.hpp  evaluation.cpp  evaluation.hpp  expression.cpp  expression.hpp  expression_evaluation.cpp  expression_generation.cpp  expression_parser.cpp  expression_parser.hpp  expression_semantics.cpp  factory.hpp  file.cpp  file.hpp  function_generation.cpp  function_generation.hpp  function_parser.cpp  function_parser.hpp  generation.cpp  generation.hpp  global_generation.cpp  global_generation.hpp  (+50 more)
doc/: design.md  foo.bkr  modules.md  types.md
tests/: 1.bkr  2.bkr  3.bkr  assert.bkr  if.bkr  while.bkr
